Chapter-3/jenkins-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: jenkins
 namespace: jenkins
spec:
 replicas: 1
 strategy:
  type: Recreate
 template:
  metadata:
   labels:
    app: jenkins-app
  spec:
   securityContext:
     fsGroup: 1000
   containers:
   - name: jenkins
     imagePullPolicy: IfNotPresent
     image: jenkins/jenkins:lts
     ports:
     - containerPort: 8080
     - containerPort: 50000
     volumeMounts:  
       - mountPath: /var/jenkins_home
         name: jenkins-home 
   volumes: 
     - name: jenkins-home
       persistentVolumeClaim: 
         claimName: jenkins-claim
