Chapter-3/jenkins-discovery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-discovery
  namespace: jenkins
spec:
  selector:
    app: jenkins-app
  ports:
    - protocol: TCP
      port: 50000
      targetPort: 50000
      name: slaves
